@@ -6,7 +6,8 @@ extends 'Catalyst::View::ByCode::Markup::Element';
 has content => (
     metaclass => 'Collection::Array',
     is => 'rw',
-    isa => 'ArrayRef[Object]',
+    # isa => 'ArrayRef[Object]',
+    isa => 'ArrayRef[Any]',
     lazy => 1,
     default => sub { [] },
     provides => {
@@ -20,8 +21,19 @@ override as_string => sub {
     my $indent_level = shift || 0;
     my $need_break = shift;
 
-    return join('', map {$_->as_string($indent_level+1, $need_break)} @{$self->content});
+    return join('', map { ref($_)
+                            ? $_->as_string($indent_level+1, $need_break)
+                            : defined($_) && $_ ne ''
+                                ? do {
+                                      my $text = $_;
+                                      $text =~ s{([\"<>&\x{0000}-\x{001f}\x{007f}-\x{ffff}])}{sprintf('&#%d;', ord($1))}oexmsg;
+                                      $text;
+                                  }
+                                : ''
+                    }
+                    @{$self->content});
 };
 
+__PACKAGE__->meta->make_immutable;
 no Moose;
 1;
