@@ -38,7 +38,7 @@ is(markup_object(), undef, 'cleared markup object is undef');
 lives_ok {init_markup()} 'initing markup 2 lives';
 isa_ok(markup_object(), 'Catalyst::View::ByCode::Markup::Document', 'markup object 2 is Document');
 
-lives_ok {markup_object->add_tag('div', id => 42)} 'adding a tag works';
+lives_ok {markup_object->add_tag('div', undef, id => 42)} 'adding a tag works';
 like(get_markup(), qr{\s*<div\s+id="42">\s*</div>\s*}xms, 'markup looks good');
 
 #
@@ -47,7 +47,7 @@ like(get_markup(), qr{\s*<div\s+id="42">\s*</div>\s*}xms, 'markup looks good');
 lives_ok {init_markup()} 'initing markup 3 lives';
 isa_ok(markup_object(), 'Catalyst::View::ByCode::Markup::Document', 'markup object 3 is Document');
 
-lives_ok {markup_object->add_tag('div', dataBlock => 42)} 'adding a tag with camelCase attr works';
+lives_ok {markup_object->add_tag('div', undef, dataBlock => 42)} 'adding a tag with camelCase attr works';
 like(get_markup(), qr{\s*<div\s+data-block="42">\s*</div>\s*}xms, 'markup looks good');
 
 
@@ -55,7 +55,7 @@ like(get_markup(), qr{\s*<div\s+data-block="42">\s*</div>\s*}xms, 'markup looks 
 lives_ok {init_markup()} 'initing markup 4 lives';
 isa_ok(markup_object(), 'Catalyst::View::ByCode::Markup::Document', 'markup object 4 is Document');
 
-lives_ok {markup_object->add_tag('div', data_test => 'xyz')} 'adding a tag with lower_cased attr works';
+lives_ok {markup_object->add_tag('div', undef, data_test => 'xyz')} 'adding a tag with lower_cased attr works';
 like(get_markup(), qr{\s*<div\s+data-test="xyz">\s*</div>\s*}xms, 'markup looks good');
 
 
@@ -63,7 +63,7 @@ like(get_markup(), qr{\s*<div\s+data-test="xyz">\s*</div>\s*}xms, 'markup looks 
 lives_ok {init_markup()} 'initing markup 5 lives';
 isa_ok(markup_object(), 'Catalyst::View::ByCode::Markup::Document', 'markup object 5 is Document');
 
-lives_ok {markup_object->add_tag('div', style => {zIndex => 999})} 'adding a tag with lower_cased attr-hash works';
+lives_ok {markup_object->add_tag('div', undef, style => {zIndex => 999})} 'adding a tag with lower_cased attr-hash works';
 like(get_markup(), qr{\s*<div\s+style="z-index:\s*999">\s*</div>\s*}xms, 'markup looks good');
 
 done_testing();
